src/main/java/com/example/timelist/error/StudentSizeInGroupException.java
package com.example.timelist.error;

public class StudentSizeInGroupException extends RuntimeException{
    public StudentSizeInGroupException(String message) {
        super(message);
    }
}
